<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".activities.SplashActivity">

    <View
        android:id="@+id/fullscreen_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <ImageView
        android:id="@+id/app_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="90dp"
        android:src="@drawable/ic_blood"
        android:transitionName="@string/app_icon_transition"
        tools:ignore="UnusedAttribute"/>

    <com.blackspider.bloodforlife.views.DancingScriptRegularFontTextView
        android:id="@+id/app_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|bottom"
        android:gravity="center|bottom"
        android:layout_marginBottom="85dp"
        android:keepScreenOn="true"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="55sp"
        android:textStyle="bold"
        android:transitionName="@string/app_title_transition"
        tools:ignore="UnusedAttribute"/>

    <com.blackspider.bloodforlife.views.DancingScriptRegularFontTextView
        android:id="@+id/status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|bottom"
        android:gravity="center|bottom"
        android:layout_marginBottom="80dp"
        android:keepScreenOn="true"
        android:text="@string/app_name"
        android:textColor="@color/red"
        android:textSize="55sp"
        android:textStyle="bold"
        android:visibility="invisible"/>

    <ImageView
        android:id="@+id/loading_gif"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="centerInside"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="55dp"
        android:keepScreenOn="true"
        android:transitionName="@string/loading_icon_transition"
        tools:ignore="UnusedAttribute" />
</FrameLayout>