<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:id="@+id/header">

            <ImageView
                android:id="@+id/img_app_logo"
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:layout_margin="4dp"
                android:contentDescription="@string/app_icon"
                android:padding="5dp"
                android:src="@drawable/ic_blood"
                android:transitionName="@string/app_icon_transition"
                tools:ignore="UnusedAttribute"
                android:visibility="visible"/>

            <com.blackspider.bloodforlife.views.DancingScriptRegularFontTextView
                android:id="@+id/textViewWelcomeNote2"
                android:layout_width="wrap_content"
                android:layout_height="110dp"
                android:layout_toRightOf="@id/img_app_logo"
                android:gravity="center"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="40sp"
                android:textStyle="bold"
                android:visibility="gone"
                android:transitionName="@string/app_title_transition"/>

            <com.blackspider.bloodforlife.views.DancingScriptRegularFontTextView
                android:id="@+id/textViewWelcomeNote1"
                android:layout_width="wrap_content"
                android:layout_height="110dp"
                android:layout_marginLeft="5dp"
                android:layout_toRightOf="@id/img_app_logo"
                android:gravity="center"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="40sp"
                android:textStyle="bold|italic"
                android:transitionName="@string/app_title_transition"/>
        </RelativeLayout>

        <FrameLayout
            android:id="@+id/frameContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/header"/>
    </RelativeLayout>

</RelativeLayout>