<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/colorPrimaryDark"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:overScrollMode="never"
    android:scrollbars="none" >

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="20dp">

            <LinearLayout
                android:id="@+id/login_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:orientation="vertical" >

                <EditText
                    android:id="@+id/login_emailid"
                    android:maxLines="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-40dp"
                    android:background="@android:color/transparent"
                    android:drawableLeft="@drawable/email"
                    android:drawablePadding="8dp"
                    android:gravity="center_vertical"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:padding="10dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white_greyish"
                    android:textSize="16sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="@color/white_greyish" />

                <EditText
                    android:id="@+id/login_password"
                    android:maxLines="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:drawableLeft="@drawable/password"
                    android:drawablePadding="8dp"
                    android:gravity="center_vertical"
                    android:hint="@string/passowrd"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white_greyish"
                    android:textSize="16sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="@color/white_greyish" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingBottom="5dp"
                    android:paddingTop="8dp" >

                    <CheckBox
                        android:id="@+id/show_hide_password"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/show_pwd"
                        android:textColor="@color/white"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/forgot_password"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="end"
                        android:padding="5dp"
                        android:text="@string/forgot"
                        android:textColor="@color/white"
                        android:textSize="14sp" />
                </LinearLayout>

                <Button
                    android:id="@+id/loginBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:background="@drawable/loginbutton_selector"
                    android:padding="3dp"
                    android:text="@string/signin"
                    android:textColor="@color/red"
                    android:textSize="17sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/createAccount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/newUser"
                    android:textColor="@color/white"
                    android:textSize="16sp" />
            </LinearLayout>

    </RelativeLayout>
</ScrollView>